--- a/frontend/packages/react-app/package.json
+++ b/frontend/packages/react-app/package.json
@@ -15,10 +15,10 @@
     ]
   },
   "dependencies": {
-    "@project/contracts": "^1.0.0",
     "@apollo/react-hooks": "^4.0.0",
     "@ethersproject/contracts": "^5.3.0",
     "@ethersproject/providers": "^5.3.1",
+    "@project/contracts": "^1.0.0",
     "@testing-library/dom": "^7.31.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -33,6 +33,7 @@
     "eslint-plugin-flowtype": "^5.7.2",
     "graphql": "^15.5.0",
     "ipfs-http-client": "^50.1.2",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
