--- a/frontend/packages/contracts/package.json
+++ b/frontend/packages/contracts/package.json
@@ -1,5 +1,18 @@
 {
   "name": "@project/contracts",
   "version": "1.0.0",
-  "main": "./src/index.js"
+  "main": "./src/index.js",
+  "description": "A minimalist, opinionated structure for managing smart contract ABIs and addresses.",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.3.2"
+  }
 }
