--- a/frontend/packages/react-app/package.json
+++ b/frontend/packages/react-app/package.json
@@ -33,11 +33,15 @@
     "eslint-plugin-flowtype": "^5.7.2",
     "graphql": "^15.5.0",
     "ipfs-http-client": "^50.1.2",
+    "moralis": "0.0.74",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-moralis": "^0.2.4",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "surge": "^0.23.0",
+    "web3": "^1.6.0",
     "web3modal": "^1.9.3"
   },
   "eslintConfig": {
